solve bugs